页面优化，修复灵感详情页